; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/common/extr_gas.c_gas_anqp_build_initial_resp.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/common/extr_gas.c_gas_anqp_build_initial_resp.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wpabuf = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.wpabuf* @gas_anqp_build_initial_resp(i32 %0, i32 %1, i32 %2, i64 %3) #0 {
  %5 = alloca %struct.wpabuf*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca i64, align 8
  %10 = alloca %struct.wpabuf*, align 8
  store i32 %0, i32* %6, align 4
  store i32 %1, i32* %7, align 4
  store i32 %2, i32* %8, align 4
  store i64 %3, i64* %9, align 8
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* %7, align 4
  %13 = load i32, i32* %8, align 4
  %14 = load i64, i64* %9, align 8
  %15 = add i64 4, %14
  %16 = trunc i64 %15 to i32
  %17 = call %struct.wpabuf* @gas_build_initial_resp(i32 %11, i32 %12, i32 %13, i32 %16)
  store %struct.wpabuf* %17, %struct.wpabuf** %10, align 8
  %18 = load %struct.wpabuf*, %struct.wpabuf** %10, align 8
  %19 = icmp eq %struct.wpabuf* %18, null
  br i1 %19, label %20, label %21

20:                                               ; preds = %4
  store %struct.wpabuf* null, %struct.wpabuf** %5, align 8
  br label %27

21:                                               ; preds = %4
  %22 = load %struct.wpabuf*, %struct.wpabuf** %10, align 8
  %23 = call i32 @gas_add_adv_proto_anqp(%struct.wpabuf* %22, i32 127, i32 0)
  %24 = load %struct.wpabuf*, %struct.wpabuf** %10, align 8
  %25 = call i32 @wpabuf_put(%struct.wpabuf* %24, i32 2)
  %26 = load %struct.wpabuf*, %struct.wpabuf** %10, align 8
  store %struct.wpabuf* %26, %struct.wpabuf** %5, align 8
  br label %27

27:                                               ; preds = %21, %20
  %28 = load %struct.wpabuf*, %struct.wpabuf** %5, align 8
  ret %struct.wpabuf* %28
}

declare dso_local %struct.wpabuf* @gas_build_initial_resp(i32, i32, i32, i32) #1

declare dso_local i32 @gas_add_adv_proto_anqp(%struct.wpabuf*, i32, i32) #1

declare dso_local i32 @wpabuf_put(%struct.wpabuf*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
